--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -1,4 +1,4 @@
-# Ignore updates to scala-xml, so it stays at 1.3.0 forever
-updates.ignore = [
-  { groupId = "org.scala-lang.modules", artifactId = "scala-xml" }
+# Pin scala-xml at 1.x forever
+updates.pin = [
+  { groupId = "org.scala-lang.modules", artifactId = "scala-xml", version = "1." }
 ]
